--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -2,8 +2,10 @@
 #
 # Git Cola can run with either PyQt5 or PySide2. You only need one of the two.
 # We recommend PyQt5 but PySide2 is also supported and can be used instead.
+# openai is required for the autofill function
 PyQt5 >= 5.6.0; python_version >= "3.0"
 PySide2; python_version == "2.7"
+openai==0.27.8
 
 # qtpy provides a PyQt5/PyQt6/PySide2 abstraction layer that makes it possible
 # to choose between PyQt5, PySide2 and other Qt backends at runtime.
