Added new files and directories
The commit includes the following changes:
- Added AIROGIT.spec and __main__.spec
- Renamed airogit.py to cola/airogit.py
- Renamed git_meme.webp to images/git_meme.webp
- Added images/command.png and images/gui.png
- Created journal.md
- Added main.spec
- Modified setup.cfg and setup.py

This commit adds new files and directories, renames existing files, and
modifies configuration and setup files. The changes are made to enhance
the structure and functionality of the AIROGIT project.

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,11 +32,13 @@ packages =
     cola.icons.dark
     cola.models
     cola.widgets
+	cola.airogit
 include_package_data = true
 install_requires =
 	importlib_metadata; python_version<"3.8"
 	PyQt5 >= 5.6.0; python_version>="3.0"
 	qtpy >= 1.1.0
+	openai >= 0.27.8
 zip_safe = false
 
 [options.package_data]
@@ -45,6 +47,8 @@ cola =
 	i18n/*
 	icons/*.svg
 	icons/dark/*.svg
+	airogit.py 
+	config/*
 
 [options.packages.find]
 exclude =
