Update airogit.py and setup.cfg
The commit includes the following changes:
- Updated airogit.py file, added functionality to read the config.yaml
file using the correct path.
- Made changes in setup.cfg, added new packages to the list.

This was done to fix issues with reading the config file and to update
the setup configuration.

Task ID: AIROGIT-123

--- a/airogit/setup.cfg
+++ b/airogit/setup.cfg
@@ -33,6 +33,7 @@ packages =
     cola.models
     cola.widgets
 	cola.airogit
+	cola.config	
 include_package_data = true
 install_requires =
 	importlib_metadata; python_version<"3.8"
